Update to 2.0.0 - Added addon packing - Added patching functionality - Added command line interface - Added teamspeak version support check - Added support to install addons from folders - Added support to specify required installer version in addon.json - Added support to specify required teamspeak version in addon.json - Added support for version selection when installing remote addons - Adjusted teamspeak installation path detection for macos - Fixed teamspeak installation path detection for linux